[Issue #916] fix bugs in IndexServiceImpl